--- a/package.json
+++ b/package.json
@@ -18,17 +18,18 @@
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
+    "pinia": "^2.1.7",
     "primeicons": "^6.0.1",
     "primevue": "^3.28.0",
     "uuid": "^9.0.0",
     "vee-validate": "^4.8.6",
-    "pinia": "^2.1.7",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
     "@tsconfig/node18": "^18.2.2",
+    "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^18.18.5",
     "@vitejs/plugin-vue": "^4.4.0",
     "@vue/eslint-config-prettier": "^8.0.0",
