--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "argon2": "^0.30.3",
     "axios": "^1.4.0",
-    "fuzzyset.js": "^1.0.7",
+    "fuzzyset": "^1.0.7",
     "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
@@ -29,8 +29,10 @@
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
     "@tsconfig/node18": "^18.2.2",
+    "@types/fuzzyset": "^1.0.7",
     "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^18.18.5",
+    "@types/uuid": "^9.0.7",
     "@vitejs/plugin-vue": "^4.4.0",
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
