--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,3 +34,4 @@ jobs:
         script: |
               cd ${{secrets.TARGET}} && npm install
               npm run build
+              docker compose up -d
