--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,16 @@ services:
     image: node:lts
     working_dir: /home/github/Front
     entrypoint: ["npm", "run", "preview", "--", "--host"]
-    ports:
-      - 5173:4173
     volumes:
       - .:/home/github/Front
     tty: true
+
+  nginx:
+    container_name: nginx
+    restart: unless-stopped
+    image: nginx
+    ports:
+      - 80:80
+      - 443:443
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
