--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -14,5 +14,9 @@ http {
         location / {
             proxy_pass http://my_frontend:4173/;
         }
-    }
+
+        location ~ /.well-known/acme-challenge/ {
+            root /var/www/certbot;
+        }
+    }    
 }
