--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "uuid": "^9.0.0",
     "vee-validate": "^4.8.6",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "vue3-google-login": "^2.0.25"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
